unpackaged/main/default/objects/Blood_Test__c/fields/Labs_Test_ID__c.field-meta.xml
<CustomField>
    <fullName>Labs_Test_ID__c</fullName>
    <description>The testing lab&#39;s identifier for the blood test sample</description>
    <externalId>true</externalId>
    <inlineHelpText>The testing lab&#39;s identifier for the blood test sample</inlineHelpText>
    <label>Labs Test ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>