unpackaged/main/default/objects/Blood_Test__c/fields/LDL__c.field-meta.xml
<CustomField>
    <fullName>LDL__c</fullName>
    <label>LDL</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>