unpackaged/main/default/objects/Blood_Test__c/fields/LDL_Max__c.field-meta.xml
<CustomField>
    <fullName>LDL_Max__c</fullName>
    <defaultValue>TEXT(3.0)</defaultValue>
    <label>LDL Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>