unpackaged/main/default/objects/Blood_Test__c/fields/LDL_Min__c.field-meta.xml
<CustomField>
    <fullName>LDL_Min__c</fullName>
    <defaultValue>TEXT(0)</defaultValue>
    <label>LDL Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>