unpackaged/main/default/objects/Blood_Test__c/fields/LH__c.field-meta.xml
<CustomField>
    <fullName>LH__c</fullName>
    <label>LH</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>