unpackaged/main/default/objects/Blood_Test__c/fields/LH_Max__c.field-meta.xml
<CustomField>
    <fullName>LH_Max__c</fullName>
    <defaultValue>TEXT(8.6)</defaultValue>
    <label>LH Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>