unpackaged/main/default/objects/Blood_Test__c/fields/LH_Min__c.field-meta.xml
<CustomField>
    <fullName>LH_Min__c</fullName>
    <defaultValue>TEXT(1.7)</defaultValue>
    <label>LH Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>