unpackaged/main/default/objects/Blood_Test__c/fields/LH_Units__c.field-meta.xml
<CustomField>
    <fullName>LH_Units__c</fullName>
    <defaultValue>&quot;IU/L&quot;</defaultValue>
    <label>LH Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>