unpackaged/main/default/objects/Blood_Test__c/fields/Low_Testosterone_Flag__c.field-meta.xml
<CustomField>
    <fullName>Low_Testosterone_Flag__c</fullName>
    <description>Red flag if testosterone results are low</description>
    <formula>IF (OR (Free_Testosterone__c &lt;= 0.225,  Testosterone__c &lt;= 15.0),

IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;),&quot;&quot;)</formula>
    <inlineHelpText>Red flag if testosterone results are low</inlineHelpText>
    <label>Low Testosterone Flag</label>
    <type>Text</type>
</CustomField>