unpackaged/main/default/objects/Blood_Test__c/fields/Lymphocytes__c.field-meta.xml
<CustomField>
    <fullName>Lymphocytes__c</fullName>
    <label>Lymphocytes</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>