unpackaged/main/default/objects/Blood_Test__c/fields/Lymphocytes_Max__c.field-meta.xml
<CustomField>
    <fullName>Lymphocytes_Max__c</fullName>
    <defaultValue>TEXT(3.65)</defaultValue>
    <label>Lymphocytes Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>