unpackaged/main/default/objects/Blood_Test__c/fields/Lymphocytes_Min__c.field-meta.xml
<CustomField>
    <fullName>Lymphocytes_Min__c</fullName>
    <defaultValue>TEXT(1.20)</defaultValue>
    <label>Lymphocytes Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>