unpackaged/main/default/objects/Blood_Test__c/fields/Lymphocytes_percentage__c.field-meta.xml
<CustomField>
    <fullName>Lymphocytes_percentage__c</fullName>
    <label>Lymphocytes %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>