unpackaged/main/default/objects/Blood_Test__c/fields/Lymphocytes_Units__c.field-meta.xml
<CustomField>
    <fullName>Lymphocytes_Units__c</fullName>
    <defaultValue>&quot;x10^9/L&quot;</defaultValue>
    <label>Lymphocytes Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>