unpackaged/main/default/objects/Blood_Test__c/fields/Magnesium__c.field-meta.xml
<CustomField>
    <fullName>Magnesium__c</fullName>
    <label>Magnesium</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>