unpackaged/main/default/objects/Blood_Test__c/fields/Magnesium_Max__c.field-meta.xml
<CustomField>
    <fullName>Magnesium_Max__c</fullName>
    <label>Magnesium Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>