unpackaged/main/default/objects/Blood_Test__c/fields/Magnesium_Min__c.field-meta.xml
<CustomField>
    <fullName>Magnesium_Min__c</fullName>
    <label>Magnesium Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>