unpackaged/main/default/objects/Blood_Test__c/fields/Magnesium_Units__c.field-meta.xml
<CustomField>
    <fullName>Magnesium_Units__c</fullName>
    <label>Magnesium Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>