unpackaged/main/default/objects/Blood_Test__c/fields/Manual_New_Order__c.field-meta.xml
<CustomField>
    <fullName>Manual_New_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this checkbox if this is a new manual order, ie. an order that was not made via our website</description>
    <inlineHelpText>Tick this checkbox if this is a new manual order, ie. an order that was not made via our website</inlineHelpText>
    <label>Manual New Order</label>
    <type>Checkbox</type>
</CustomField>