unpackaged/main/default/objects/Blood_Test__c/fields/MCHC__c.field-meta.xml
<CustomField>
    <fullName>MCHC__c</fullName>
    <label>MCHC</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>