unpackaged/main/default/objects/Blood_Test__c/fields/MCHC_Max__c.field-meta.xml
<CustomField>
    <fullName>MCHC_Max__c</fullName>
    <defaultValue>TEXT(350)</defaultValue>
    <label>MCHC Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>