unpackaged/main/default/objects/Blood_Test__c/fields/MCHC_Min__c.field-meta.xml
<CustomField>
    <fullName>MCHC_Min__c</fullName>
    <defaultValue>TEXT(300)</defaultValue>
    <label>MCHC Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>