unpackaged/main/default/objects/Blood_Test__c/fields/Mean_Cell_Haemoglobin__c.field-meta.xml
<CustomField>
    <fullName>Mean_Cell_Haemoglobin__c</fullName>
    <label>Mean Cell Haemoglobin</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>