unpackaged/main/default/objects/Blood_Test__c/fields/Mean_Cell_Haemoglobin_Min__c.field-meta.xml
<CustomField>
    <fullName>Mean_Cell_Haemoglobin_Min__c</fullName>
    <defaultValue>TEXT(27.0)</defaultValue>
    <label>Mean Cell Haemoglobin Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>