unpackaged/main/default/objects/Blood_Test__c/fields/Mean_Cell_Haemoglobin_Units__c.field-meta.xml
<CustomField>
    <fullName>Mean_Cell_Haemoglobin_Units__c</fullName>
    <defaultValue>&quot;pg&quot;</defaultValue>
    <label>Mean Cell Haemoglobin Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>