unpackaged/main/default/objects/Blood_Test__c/fields/Mean_Cell_Volume__c.field-meta.xml
<CustomField>
    <fullName>Mean_Cell_Volume__c</fullName>
    <label>Mean Cell Volume</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>