unpackaged/main/default/objects/Blood_Test__c/fields/Mean_Cell_Volume_Max__c.field-meta.xml
<CustomField>
    <fullName>Mean_Cell_Volume_Max__c</fullName>
    <defaultValue>TEXT(98.0)</defaultValue>
    <label>Mean Cell Volume Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>