unpackaged/main/default/objects/Blood_Test__c/fields/Mean_Cell_Volume_Min__c.field-meta.xml
<CustomField>
    <fullName>Mean_Cell_Volume_Min__c</fullName>
    <defaultValue>TEXT(81)</defaultValue>
    <label>Mean Cell Volume Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>