unpackaged/main/default/objects/Blood_Test__c/fields/Mean_Cell_Volume_Units__c.field-meta.xml
<CustomField>
    <fullName>Mean_Cell_Volume_Units__c</fullName>
    <defaultValue>&quot;fl&quot;</defaultValue>
    <label>Mean Cell Volume Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>