unpackaged/main/default/objects/Blood_Test__c/fields/Meddx_Kit_Type__c.field-meta.xml
<CustomField>
    <fullName>Meddx_Kit_Type__c</fullName>
    <formula>CASE(
        Test_Type__c,
        &quot;OPT013-FP&quot;, &quot;KT460&quot;,
        &quot;OPT013-V&quot;, &quot;PP009&quot;,
        &quot;OPT002-FP&quot;, &quot;KT460&quot;,
        &quot;OPT002-V&quot;, &quot;PP009&quot;,
        &quot;OPT003-FP&quot;, &quot;KT461&quot;,
        &quot;OPT003-V&quot;, &quot;PP010&quot;,
        &quot;OPT004-FP&quot;, &quot;KT461&quot;,
        &quot;OPT004-V&quot;, &quot;PP010&quot;,
        &quot;OPTLFT-FP&quot;, &quot;KT460&quot;,
        &quot;OPTLFT-V&quot;, &quot;PP009&quot;,
        &quot;OPTPSA-FP&quot;, &quot;KT460&quot;,
        &quot;OPTPSA-V&quot;, &quot;PP009&quot;,
        &quot;OPT101-FP&quot;, &quot;KT173&quot;,
        &quot;OPT101-V&quot;, &quot;KT317&quot;,
        &quot;OPT102-FP&quot;, &quot;KT173&quot;,
        &quot;OPT102-V&quot;, &quot;KT317&quot;,
        &quot;OPT103-FP&quot;, &quot;INUVI-005&quot;,
        &quot;OPT103-V&quot;, &quot;KT318&quot;,
        &quot;OPT104&quot;, &quot;KT318&quot;,
        &quot;OPT104-FP&quot;, &quot;INUVI-005&quot;,
        &quot;OPT104-V&quot;, &quot;KT318&quot;,
        &quot;OPTFBC-FP&quot;, &quot;KT461&quot;,
        &quot;OPTFBC-V&quot;, &quot;PP010&quot;,
        &quot;Bespoke&quot;, &quot;Bespoke&quot;,
        &quot;OPT907-FP&quot;, &quot;KT460&quot;,
        &quot;OPT907-V&quot;, &quot;PP009&quot;,
        &quot;OPT908-FP&quot;, &quot;KT460&quot;,
        &quot;OPT908-V&quot;, &quot;PP009&quot;,
        &quot;OPT909-FP&quot;, &quot;KT460&quot;,
        &quot;OPT909-V&quot;, &quot;PP009&quot;,
        &quot;OPT910-FP&quot;, &quot;KT460&quot;,
        &quot;OPT910-V&quot;, &quot;PP009&quot;,
        &quot;OPT911-FP&quot;, &quot;KT460&quot;,
        &quot;OPT911-V&quot;, &quot;PP009&quot;,
        &quot;OPT912-FP&quot;, &quot;KT460&quot;,
        &quot;OPT912-V&quot;, &quot;PP009&quot;,
        &quot;OPT913-FP&quot;, &quot;KT460&quot;,
        &quot;OPT913-V&quot;, &quot;PP009&quot;,
        &quot;OPT914-FP&quot;, &quot;KT460&quot;,
        &quot;OPT914-V&quot;, &quot;PP009&quot;,
        &quot;OPT915-FP&quot;, &quot;KT461&quot;,
        &quot;OPT915-V&quot;, &quot;PP010&quot;,
        &quot;OPT916-FP&quot;, &quot;KT460&quot;,
        &quot;OPT916-V&quot;, &quot;PP009&quot;,
        &quot;OPT917-FP&quot;, &quot;KT460&quot;,
        &quot;OPT917-V&quot;, &quot;PP009&quot;,
        &quot;OPT918-FP&quot;, &quot;KT460&quot;,
        &quot;OPT918-V&quot;, &quot;PP009&quot;,
        &quot;OPTOEST-FP&quot;, &quot;KT460&quot;,
        &quot;OPTOEST-V&quot;, &quot;PP009&quot;,
&quot;OPT374-V&quot;, &quot;PP010&quot;,
&quot;Patient Submitted Results&quot;, &quot;N/A&quot;,
&quot;TPSA-FP&quot;, &quot;KT460&quot;,
&quot;TPSA-V&quot;, &quot;PP009&quot;,
&quot;HSC1-V (FBC)&quot;, &quot;PP010&quot;,
&quot;HSC1-V&quot;, &quot;PP010&quot;,
&quot;EST-FP&quot;, &quot;KT460&quot;,
&quot;EST-V&quot;, &quot;PP009&quot;,
&quot;FERRITIN-FP&quot;, &quot;KT460&quot;,
&quot;FERRITIN-V&quot;, &quot;PP009&quot;,
&quot;FSH-FP&quot;, &quot;KT460&quot;,
&quot;FSH-V&quot;, &quot;PP009&quot;,
&quot;XLIPIDS-FP&quot;, &quot;KT460&quot;,
&quot;XLIPIDS-V&quot;, &quot;PP009&quot;,
&quot;RP9-FP&quot;, &quot;KT460&quot;,
&quot;RP9-V&quot;, &quot;PP009&quot;,
&quot;NA-FP&quot;, &quot;KT460&quot;,
&quot;NA-V&quot;, &quot;PP009&quot;,
        &quot;KT460&quot;
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kit Type</label>
    <type>Text</type>
</CustomField>