unpackaged/main/default/objects/Blood_Test__c/fields/Monocytes__c.field-meta.xml
<CustomField>
    <fullName>Monocytes__c</fullName>
    <label>Monocytes</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>