unpackaged/main/default/objects/Blood_Test__c/fields/Monocytes_Max__c.field-meta.xml
<CustomField>
    <fullName>Monocytes_Max__c</fullName>
    <defaultValue>TEXT(1.00)</defaultValue>
    <label>Monocytes Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>