unpackaged/main/default/objects/Blood_Test__c/fields/Monocytes_Min__c.field-meta.xml
<CustomField>
    <fullName>Monocytes_Min__c</fullName>
    <defaultValue>TEXT(0.20)</defaultValue>
    <label>Monocytes Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>