unpackaged/main/default/objects/Blood_Test__c/fields/Monocytes_percentage__c.field-meta.xml
<CustomField>
    <fullName>Monocytes_percentage__c</fullName>
    <label>Monocytes %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>