unpackaged/main/default/objects/Blood_Test__c/fields/MPV__c.field-meta.xml
<CustomField>
    <fullName>MPV__c</fullName>
    <label>MPV</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>