unpackaged/main/default/objects/Blood_Test__c/fields/MPV_Max__c.field-meta.xml
<CustomField>
    <fullName>MPV_Max__c</fullName>
    <defaultValue>TEXT(13.00)</defaultValue>
    <label>MPV Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>