unpackaged/main/default/objects/Blood_Test__c/fields/MPV_Min__c.field-meta.xml
<CustomField>
    <fullName>MPV_Min__c</fullName>
    <defaultValue>TEXT(7.00)</defaultValue>
    <label>MPV Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>