unpackaged/main/default/objects/Blood_Test__c/fields/MPV_Units__c.field-meta.xml
<CustomField>
    <fullName>MPV_Units__c</fullName>
    <defaultValue>&quot;fl&quot;</defaultValue>
    <label>MPV Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>