unpackaged/main/default/objects/Blood_Test__c/fields/Neutrophils__c.field-meta.xml
<CustomField>
    <fullName>Neutrophils__c</fullName>
    <label>Neutrophils</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>