unpackaged/main/default/objects/Blood_Test__c/fields/Neutrophils_Max__c.field-meta.xml
<CustomField>
    <fullName>Neutrophils_Max__c</fullName>
    <defaultValue>TEXT(7.50)</defaultValue>
    <label>Neutrophils Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>