unpackaged/main/default/objects/Blood_Test__c/fields/Neutrophils_Min__c.field-meta.xml
<CustomField>
    <fullName>Neutrophils_Min__c</fullName>
    <defaultValue>TEXT(2.00)</defaultValue>
    <label>Neutrophils Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>