unpackaged/main/default/objects/Blood_Test__c/fields/Neutrophils_percentage__c.field-meta.xml
<CustomField>
    <fullName>Neutrophils_percentage__c</fullName>
    <label>Neutrophils %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>