unpackaged/main/default/objects/Blood_Test__c/fields/Non_HDL_Cholesterol__c.field-meta.xml
<CustomField>
    <fullName>Non_HDL_Cholesterol__c</fullName>
    <label>Non HDL Cholesterol</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>