unpackaged/main/default/objects/Blood_Test__c/fields/Non_HDL_Cholesterol_Max__c.field-meta.xml
<CustomField>
    <fullName>Non_HDL_Cholesterol_Max__c</fullName>
    <defaultValue>TEXT(4.0)</defaultValue>
    <label>Non HDL Cholesterol Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>