unpackaged/main/default/objects/Blood_Test__c/fields/Non_HDL_Cholesterol_Min__c.field-meta.xml
<CustomField>
    <fullName>Non_HDL_Cholesterol_Min__c</fullName>
    <defaultValue>TEXT(0.0)</defaultValue>
    <label>Non HDL Cholesterol Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>