unpackaged/main/default/objects/Blood_Test__c/fields/Non_HDL_Cholesterol_Units__c.field-meta.xml
<CustomField>
    <fullName>Non_HDL_Cholesterol_Units__c</fullName>
    <defaultValue>&quot;mmol/L&quot;</defaultValue>
    <label>Non HDL Cholesterol Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>