unpackaged/main/default/objects/Blood_Test__c/fields/Oestradiol__c.field-meta.xml
<CustomField>
    <fullName>Oestradiol__c</fullName>
    <label>Oestradiol</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>