unpackaged/main/default/objects/Blood_Test__c/fields/Oestradiol_Max__c.field-meta.xml
<CustomField>
    <fullName>Oestradiol_Max__c</fullName>
    <defaultValue>TEXT(159)</defaultValue>
    <label>Oestradiol Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>