unpackaged/main/default/objects/Blood_Test__c/fields/Oestradiol_Min__c.field-meta.xml
<CustomField>
    <fullName>Oestradiol_Min__c</fullName>
    <defaultValue>TEXT(41)</defaultValue>
    <label>Oestradiol Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>