unpackaged/main/default/objects/Blood_Test__c/fields/Oestradiol_Units__c.field-meta.xml
<CustomField>
    <fullName>Oestradiol_Units__c</fullName>
    <defaultValue>&quot;pmol/L&quot;</defaultValue>
    <label>Oestradiol Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>