unpackaged/main/default/objects/Blood_Test__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>Date the Blood Test was ordered by the patient</description>
    <inlineHelpText>Date the Blood Test was ordered by the patient</inlineHelpText>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>