unpackaged/main/default/objects/Blood_Test__c/fields/Patient_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_Status__c</fullName>
    <formula>TEXT(Contact__r.Account.PersonContact.Patient_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Status</label>
    <type>Text</type>
</CustomField>