unpackaged/main/default/objects/Blood_Test__c/fields/Patient_Submitted_Results__c.field-meta.xml
<CustomField>
    <fullName>Patient_Submitted_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Results submitted by patient from another blood testing service eg Medichecks</description>
    <inlineHelpText>Results submitted by patient from another blood testing service eg Medichecks</inlineHelpText>
    <label>Patient Submitted Results</label>
    <type>Checkbox</type>
</CustomField>