unpackaged/main/default/objects/Blood_Test__c/fields/PDF_Password__c.field-meta.xml
<CustomField>
    <fullName>PDF_Password__c</fullName>
    <label>PDF Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>