unpackaged/main/default/objects/Blood_Test__c/fields/PDF_Results_Upload_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PDF_Results_Upload_Date_Time__c</fullName>
    <label>PDF Results Upload Date/Time</label>
    <type>DateTime</type>
</CustomField>