unpackaged/main/default/objects/Blood_Test__c/fields/Platelets__c.field-meta.xml
<CustomField>
    <fullName>Platelets__c</fullName>
    <label>Platelets</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>