unpackaged/main/default/objects/Blood_Test__c/fields/Platelets_Max__c.field-meta.xml
<CustomField>
    <fullName>Platelets_Max__c</fullName>
    <defaultValue>TEXT(400)</defaultValue>
    <label>Platelets Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>