unpackaged/main/default/objects/Blood_Test__c/fields/Platelets_Min__c.field-meta.xml
<CustomField>
    <fullName>Platelets_Min__c</fullName>
    <defaultValue>TEXT(150)</defaultValue>
    <label>Platelets Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>