unpackaged/main/default/objects/Blood_Test__c/fields/Prolactin_Max__c.field-meta.xml
<CustomField>
    <fullName>Prolactin_Max__c</fullName>
    <defaultValue>TEXT(324)</defaultValue>
    <label>Prolactin Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>