unpackaged/main/default/objects/Blood_Test__c/fields/Prolactin_Min__c.field-meta.xml
<CustomField>
    <fullName>Prolactin_Min__c</fullName>
    <defaultValue>TEXT(86)</defaultValue>
    <label>Prolactin Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>