unpackaged/main/default/objects/Blood_Test__c/fields/PSA_Prostate__c.field-meta.xml
<CustomField>
    <fullName>PSA_Prostate__c</fullName>
    <label>PSA (Prostate)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>