unpackaged/main/default/objects/Blood_Test__c/fields/PSA_Prostate_Max__c.field-meta.xml
<CustomField>
    <fullName>PSA_Prostate_Max__c</fullName>
    <defaultValue>TEXT(1.4)</defaultValue>
    <label>PSA (Prostate) Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>