unpackaged/main/default/objects/Blood_Test__c/fields/PSA_Prostate_Min__c.field-meta.xml
<CustomField>
    <fullName>PSA_Prostate_Min__c</fullName>
    <defaultValue>TEXT(0)</defaultValue>
    <label>PSA (Prostate) Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>