unpackaged/main/default/objects/Blood_Test__c/fields/PSA_Prostate_Units__c.field-meta.xml
<CustomField>
    <fullName>PSA_Prostate_Units__c</fullName>
    <defaultValue>&quot;ng/mL&quot;</defaultValue>
    <label>PSA (Prostate) Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>