unpackaged/main/default/objects/Blood_Test__c/fields/QR_Code_Mini__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Mini__c</fullName>
    <formula>IMAGE(&quot;http://api.qrserver.com/v1/create-qr-code/?size=50x50&amp;data=&quot;&amp; Contact__r.Patient_ID__c &amp; &quot;%09&quot; &amp;  Name &amp; &quot;%09&quot; &amp; Contact__r.LastName &amp; &quot;%09&quot; &amp;  Contact__r.FirstName &amp; &quot;%09&quot; &amp; &quot;%09&quot; &amp; &quot;M&quot; &amp; &quot;%09&quot; &amp; LPAD(TEXT(DAY(Contact__r.Date_of_Birth__c)),2,&quot;0&quot;) &amp; LPAD(TEXT(MONTH(Contact__r.Date_of_Birth__c)),2,&quot;0&quot;) &amp; TEXT(YEAR(Contact__r.Date_of_Birth__c))  &amp; &quot;%09&quot; &amp; &quot;%09&quot; &amp; &quot;OPTIMALE&quot; &amp; &quot;%09&quot; &amp; &quot;%09&quot; &amp; &quot;%09&quot; &amp; &quot;%09&quot; &amp; &quot;%09&quot; &amp; &quot;%09&quot; &amp; &quot;%09&quot; &amp; &quot;%09&quot; &amp; &quot;%09&quot; &amp; &quot;%09&quot; &amp; &quot;%09&quot; &amp; &quot;%09&quot; &amp;  TEXT(Test_Type__c),  &quot;QR Code&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code - Mini</label>
    <type>Text</type>
</CustomField>