unpackaged/main/default/objects/Blood_Test__c/fields/Randox_Test_Code__c.field-meta.xml
<CustomField>
    <fullName>Randox_Test_Code__c</fullName>
    <formula>LEFT(TEXT(Test_Type__c), FIND(&quot;-&quot;, TEXT(Test_Type__c))-1)</formula>
    <inlineHelpText>Converts the standard Optimale test codes into Randox test codes</inlineHelpText>
    <label>Randox Test Code</label>
    <type>Text</type>
</CustomField>