unpackaged/main/default/objects/Blood_Test__c/fields/Re_send_HL7_file_to_Randox__c.field-meta.xml
<CustomField>
    <fullName>Re_send_HL7_file_to_Randox__c</fullName>
    <label>Re-send HL7 file to Randox</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Re-send HL7 file to Randox</fullName>
            </value>
            <value>
                <fullName>HL7 file re-sent to Randox</fullName>
            </value>
            <value>
                <fullName>HL7 file sent to Randox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>