unpackaged/main/default/objects/Blood_Test__c/fields/Reason_for_failed_values__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_failed_values__c</fullName>
    <inlineHelpText>Failure reason(s) for any failed values</inlineHelpText>
    <label>Reason for failed values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>