unpackaged/main/default/objects/Blood_Test__c/fields/Red_Blood_Cells__c.field-meta.xml
<CustomField>
    <fullName>Red_Blood_Cells__c</fullName>
    <label>Red Blood Cells</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>