unpackaged/main/default/objects/Blood_Test__c/fields/Red_Blood_Cells_Max__c.field-meta.xml
<CustomField>
    <fullName>Red_Blood_Cells_Max__c</fullName>
    <defaultValue>TEXT(5.80)</defaultValue>
    <label>Red Blood Cells Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>