unpackaged/main/default/objects/Blood_Test__c/fields/Red_Blood_Cells_Min__c.field-meta.xml
<CustomField>
    <fullName>Red_Blood_Cells_Min__c</fullName>
    <defaultValue>TEXT(4.40)</defaultValue>
    <label>Red Blood Cells Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>