unpackaged/main/default/objects/Blood_Test__c/fields/Red_Blood_Cells_Units__c.field-meta.xml
<CustomField>
    <fullName>Red_Blood_Cells_Units__c</fullName>
    <defaultValue>&quot;x10^12/L&quot;</defaultValue>
    <label>Red Blood Cells Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>