unpackaged/main/default/objects/Blood_Test__c/fields/Red_Cell_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Red_Cell_Distribution__c</fullName>
    <label>Red Cell Distribution Width (RDW)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>