unpackaged/main/default/objects/Blood_Test__c/fields/Red_Cell_Distribution_Max__c.field-meta.xml
<CustomField>
    <fullName>Red_Cell_Distribution_Max__c</fullName>
    <defaultValue>TEXT(14.4)</defaultValue>
    <label>Red Cell Distribution Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>