unpackaged/main/default/objects/Blood_Test__c/fields/Red_Cell_Distribution_Min__c.field-meta.xml
<CustomField>
    <fullName>Red_Cell_Distribution_Min__c</fullName>
    <defaultValue>TEXT(11.5)</defaultValue>
    <label>Red Cell Distribution Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>