unpackaged/main/default/objects/Blood_Test__c/fields/Red_Cell_Distribution_Units__c.field-meta.xml
<CustomField>
    <fullName>Red_Cell_Distribution_Units__c</fullName>
    <defaultValue>&quot;%&quot;</defaultValue>
    <label>Red Cell Distribution Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>