unpackaged/main/default/objects/Blood_Test__c/fields/Replacement_Kit__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is a replacement blood test kit due to a failed test, check this box</description>
    <inlineHelpText>If this is a replacement blood test kit due to a failed test, check this box</inlineHelpText>
    <label>Replacement Kit</label>
    <type>Checkbox</type>
</CustomField>