unpackaged/main/default/objects/Blood_Test__c/fields/Replacement_Reason__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Reason__c</fullName>
    <label>Replacement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st replacement - Haemolysed</fullName>
            </value>
            <value>
                <fullName>1st replacement - Failed values</fullName>
            </value>
            <value>
                <fullName>1st replacement - Unable to fill</fullName>
            </value>
            <value>
                <fullName>1st replacement - Missing label</fullName>
            </value>
            <value>
                <fullName>1st replacement - Insufficient</fullName>
            </value>
            <value>
                <fullName>1st replacement - Kit didn&#39;t arrive</fullName>
            </value>
            <value>
                <fullName>1st replacement - Incorrect kit arrived</fullName>
            </value>
            <value>
                <fullName>1st replacement - Incorrect details printed on labels</fullName>
            </value>
            <value>
                <fullName>2nd replacement - Haemolysed</fullName>
            </value>
            <value>
                <fullName>2nd replacement - Failed values</fullName>
            </value>
            <value>
                <fullName>2nd replacement - Unable to fill</fullName>
            </value>
            <value>
                <fullName>2nd replacement - Missing label</fullName>
            </value>
            <value>
                <fullName>2nd replacement - Insufficient</fullName>
            </value>
            <value>
                <fullName>2nd replacement - Kit didn&#39;t arrive</fullName>
            </value>
            <value>
                <fullName>2nd replacement - Incorrect kit arrived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>