unpackaged/main/default/objects/Blood_Test__c/fields/Results_Status__c.field-meta.xml
<CustomField>
    <fullName>Results_Status__c</fullName>
    <label>Results Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not sent to patient</fullName>
            </value>
            <value>
                <fullName>Checking with doctor</fullName>
            </value>
            <value>
                <fullName>Sent to patient</fullName>
            </value>
            <value>
                <fullName>Discuss at consultation</fullName>
            </value>
            <value>
                <fullName>Sent to patient (automated)</fullName>
            </value>
            <value>
                <fullName>Auto-send to patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>