unpackaged/main/default/objects/Blood_Test__c/fields/Sample_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Date__c</fullName>
    <description>Date that the blood sample was analysed</description>
    <inlineHelpText>Date that the blood sample was analysed</inlineHelpText>
    <label>Sample Date</label>
    <type>Date</type>
</CustomField>