unpackaged/main/default/objects/Blood_Test__c/fields/Sample_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sample_Date_Time__c</fullName>
    <label>Sample Date/Time</label>
    <type>DateTime</type>
</CustomField>