unpackaged/main/default/objects/Blood_Test__c/fields/Sample_Return_Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Sample_Return_Tracking_ID__c</fullName>
    <label>Sample Return Tracking ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>