unpackaged/main/default/objects/Blood_Test__c/fields/Sample_Return_Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>Sample_Return_Tracking_Link__c</fullName>
    <label>Sample Return Tracking Link</label>
    <type>Url</type>
</CustomField>