unpackaged/main/default/objects/Blood_Test__c/fields/Serum_Folate__c.field-meta.xml
<CustomField>
    <fullName>Serum_Folate__c</fullName>
    <label>Serum Folate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>