unpackaged/main/default/objects/Blood_Test__c/fields/SHBG__c.field-meta.xml
<CustomField>
    <fullName>SHBG__c</fullName>
    <label>SHBG</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>