unpackaged/main/default/objects/Blood_Test__c/fields/SHBG_Max__c.field-meta.xml
<CustomField>
    <fullName>SHBG_Max__c</fullName>
    <defaultValue>TEXT(40.0)</defaultValue>
    <label>SHBG Max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>